--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
+body {
+    background-color: #ddd;
+}
+h1 {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color: darkslategray;
+}
+h3 {
+    font-family: Verdana, Tahoma, sans-serif;
+    color: royalblue;
+    size: 35px;
+    margin-bottom: 2px; 
+    text-align: justify;
+}
+h4 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkslateblue;
+    size: 30px;
+    margin-bottom: 2px; 
+}
+h5 {
+    font-family: Arial;
+    color: darkslateblue;
+    size: 40px;
+    margin-bottom: 2px; 
+}
 div.kartka {
     width: 210mm;
-    height: 297mm;
+    height: 450mm;
 
-    background-color: #ddd;
+    background-color: white;
     box-shadow: 2mm 2mm 8px #666;
     border: 1px solid #444;
     margin: 0.5cm;
@@ -19,7 +45,7 @@ div.poboczne {
     float: right;
     
 }
-ul.kompetencje {
+ol.kompetencje {
     margin-left : 0px;
     padding-left : 0px;
 }
@@ -27,12 +53,90 @@ ul.social {
     margin-left : 0px;
     padding-left : 0px;
 }
+ul.daneOsobowe {
+    list-style-type: none;
+    margin-left : 0px;
+    padding-left : 0px;
+}
+li.pierwsza {
+    font-family: sans-serif;
+    font-weight: bold;
+    padding-bottom: 1mm;
+    padding-top: 2mm;
+    color: royalblue;
+    font-size: 15px;
+}
+li.druga {
+    font-family: sans-serif;
+}
 table.doswiadczenie td {
     padding: 3mm;
     border-collapse: collapse;
-	border: 1px solid #000000;
+	border-bottom: 1px solid #000000;
 }
 div.foot {
     clear: both;
     bottom: 1.5cm;
+}
+#foto {
+    width: 45mm;
+}
+.poleformularza {
+    margin-right: 100mm;
+    margin-bottom: 2mm;
+}
+#listaSelect {
+    margin-bottom: 2mm;
+}
+#submit {
+    margin-top: 2mm;
+}
+td.lata {
+    width: 150px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+td.stanowisko {
+    font-family: sans-serif;
+}
+p.omnie {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+ol.kompetencje {
+    font-family: sans-serif;
+}
+ul.social {
+    font-family: sans-serif;
+}
+.formularz {
+    font-family: sans-serif;
+}
+textarea {
+    padding:5px 5px;
+    vertical-align:top;
+    border:1px solid #54A5DA;
+    height:120px;
+    background:#fff;
+    font-size:13px;
+    font-family:'Open Sans', sans-serif;
+    color:#666;
+    display:block;
+    width:100%;
+}
+input {
+    padding:5px 5px;
+    vertical-align:top;
+    border:1px solid #54A5DA;
+    background:#fff;
+    font-size:13px;
+    font-family:'Open Sans', sans-serif;
+    color:#666;
+    display:block;
+    width:100%; 
+}
+.dodatkowe {
+    font-family: sans-serif;
+}
+.foot {
+    font-family: sans-serif;
 }
